# axum-sqlx

./: .gitignore  Cargo.toml  README.md  app.sql
src/: config.rs  err.rs  form.rs  handler.rs  lib.rs  main.rs  view.rs
src/db/: member.rs  mod.rs
src/model/: member.rs  mod.rs  state.rs
templates/: add.html  base.html  detail.html  edit.html  index.html  select_in.html  tran.html
